--- a/src/scss/burger-menu.scss
+++ b/src/scss/burger-menu.scss
@@ -23,12 +23,12 @@ $whitecolor: #fff;
   margin-bottom: 46px;
 }
 
-.button-alt-burger {
+.button__alt-burger {
   background-image: url(../img/alt_burger.svg);
   margin-left: 24px;
 }
 
-.button-alt-search {
+.button__alt-search {
   background-image: url(../img/alt-search.svg);
   margin-right: 16px;
   margin-left: auto;
