--- a/src/scss/slider-techno.scss
+++ b/src/scss/slider-techno.scss
@@ -24,16 +24,6 @@ $headerSwiperCol: #7e7e82;
     margin-bottom: 20px;
   }
 
-  .remontTechno__header-name {
-    text-transform: uppercase;
-    font-size: 16px;
-    color: $headerSwiperCol;
-    font-weight: 600;
-    line-height: 24px;
-    letter-spacing: -0.2px;
-    text-align: left;
-  }
-
   .swiper {
     width: 100%;
     height: 100%;
@@ -50,7 +40,7 @@ $headerSwiperCol: #7e7e82;
     background-color: $whitecolor;
   }
 
-  .button-link {
+  .button__link {
     background: url(../img/brends/brand-link.svg) no-repeat center;
     position: relative;
     top: 40%;
